--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ python-docx==0.8.11
 reportlab==4.0.4
 pandas==2.1.4
 openpyxl==3.1.2
+rapidfuzz==3.6.1
+beautifulsoup4==4.12.2
+lxml==4.9.3
+requests==2.31.0
